--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -20,17 +20,17 @@
     <!--<link rel="stylesheet" href="css/magnific-popup.css">-->
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/magnific-popup.css' %}">
 
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'core/aos.css' %}">
+    <!-- <link rel="stylesheet" href="css/aos.css"> -->
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/aos.css' %}">
 
-    <link rel="stylesheet" href="css/ionicons.min.css">
+    <!-- <link rel="stylesheet" href="css/ionicons.min.css"> -->
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/ionicons.css' %}">
     
-    <link rel="stylesheet" href="css/flaticon.css">
+    <!-- <link rel="stylesheet" href="css/flaticon.css">-->
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/flaticon.css' %}">
-    <link rel="stylesheet" href="css/icomoon.css">
+    <!--<link rel="stylesheet" href="css/icomoon.css">-->
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/icomoon.css' %}">
-    <link rel="stylesheet" href="css/style.css">
+    <!--<link rel="stylesheet" href="css/style.css">-->
     <link rel="stylesheet" type="text/css" href="{% static 'core/css/style.css' %}">
     <!-- CSS only -->
 	<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -95,7 +95,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/about.jpg);">
+	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image: url('images/about.jpg');">
 	    				</div>
     				</div>
     			</div>
@@ -923,29 +923,44 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
-  <script src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="{% static 'core/js/jquery.min.js' %}"></script>
+  <!-- <script src="js/jquery.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script type="text/javascript" src="{% static 'core/js/jquery-migrate-3.0.1.min.js' %}"></script>
+  <!-- <script src="js/jquery-migrate-3.0.1.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/jquery-migrate-3.0.1.min.js' %}"></script>
 
-  <script src="js/popper.min.js"></script>
-  <script type="text/javascript" src="{% static 'core/js/popper.min.js' %}"></script>
+  <!-- <script src="js/popper.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
 
-  <script src="js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="{% static 'core/js/bootsrap.js' %}"></script>
+  <!-- <script src="js/bootstrap.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
 
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
-  
-  <script src="js/main.js"></script>
-  <script type="text/javascript" src="{% static 'core/js/main.js' %}"></script>
+  <!-- <script src="js/jquery.easing.1.3.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/jquery.easing.1.3.js' %}"></script>
+
+  <!-- <script src="js/jquery.waypoints.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/jquey.waypoints.min.js' %}"></script>
+
+  <!-- <script src="js/jquery.stellar.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/jquery.stellar.min.js' %}"></script>
+
+  <!-- <script src="js/owl.carousel.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/owl.carousel.min.js' %}"></script>
+
+  <!-- <script src="js/jquery.magnific-popup.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+
+  <!-- <script src="js/aos.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/aos.js' %}"></script>
+
+  <<!-- script src="js/jquery.animateNumber.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/animateNumber.min.js' %}"></script>
+
+  <!-- <script src="js/scrollax.min.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/scrollax.min.js' %}"></script>
+
+  <!-- <script src="js/main.js"></script> -->
+  <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
     
   </body>
 </html>
